src/main/java/grammar/regexToolParser.java
// Generated from C:/Users/jeffr/Documents/School/Language/RegexTool/src/main/java/grammar\regexTool.g4 by ANTLR 4.9.1
package grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class regexToolParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, WS=6, COMMENT=7, LINE_END=8, LABEL_KEY=9, 
		TEST_KEY=10, BUILD_KEY=11, CAPTURE_KEY=12, FUNCTION_KEY=13, IMPORT_KEY=14, 
		NAMESPACE_KEY=15, QUOTE=16, IDENT=17, NS_IDENT=18, CONSTANT=19;
	public static final int
		RULE_start = 0, RULE_imports = 1, RULE_namespace = 2, RULE_statements = 3, 
		RULE_statement = 4, RULE_label_stmt = 5, RULE_capture_stmt = 6, RULE_build_stmt = 7, 
		RULE_test_stmt = 8, RULE_test_output = 9, RULE_func_stmt = 10, RULE_term_list = 11, 
		RULE_func_call = 12, RULE_term = 13, RULE_variable = 14, RULE_param = 15, 
		RULE_arg_list = 16, RULE_arg_list_tail = 17, RULE_param_list = 18, RULE_param_list_tail = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "imports", "namespace", "statements", "statement", "label_stmt", 
			"capture_stmt", "build_stmt", "test_stmt", "test_output", "func_stmt", 
			"term_list", "func_call", "term", "variable", "param", "arg_list", "arg_list_tail", 
			"param_list", "param_list_tail"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'[]'", "'('", "')'", "','", null, null, null, "'label'", 
			"'test'", "'build'", "'capture'", "'function'", "'import'", "'namespace'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, "WS", "COMMENT", "LINE_END", "LABEL_KEY", 
			"TEST_KEY", "BUILD_KEY", "CAPTURE_KEY", "FUNCTION_KEY", "IMPORT_KEY", 
			"NAMESPACE_KEY", "QUOTE", "IDENT", "NS_IDENT", "CONSTANT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "regexTool.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public regexToolParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public NamespaceContext namespace() {
			return getRuleContext(NamespaceContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof regexToolVisitor ) return ((regexToolVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			imports();
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NAMESPACE_KEY) {
				{
				setState(41);
				namespace();
				}
			}

			setState(44);
			statements();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportsContext extends ParserRuleContext {
		public ImportsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imports; }
	 
		public ImportsContext() { }
		public void copyFrom(ImportsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ImportCommentFEContext extends ImportsContext {
		public TerminalNode COMMENT() { return getToken(regexToolParser.COMMENT, 0); }
		public TerminalNode EOF() { return getToken(regexToolParser.EOF, 0); }
		public ImportCommentFEContext(ImportsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).enterImportCommentFE(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).exitImportCommentFE(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof regexToolVisitor ) return ((regexToolVisitor<? extends T>)visitor).visitImportCommentFE(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ImportEmptyContext extends ImportsContext {
		public TerminalNode LINE_END() { return getToken(regexToolParser.LINE_END, 0); }
		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class,0);
		}
		public ImportEmptyContext(ImportsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).enterImportEmpty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).exitImportEmpty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof regexToolVisitor ) return ((regexToolVisitor<? extends T>)visitor).visitImportEmpty(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ImportFEContext extends ImportsContext {
		public Token fname;
		public TerminalNode IMPORT_KEY() { return getToken(regexToolParser.IMPORT_KEY, 0); }
		public TerminalNode EOF() { return getToken(regexToolParser.EOF, 0); }
		public TerminalNode QUOTE() { return getToken(regexToolParser.QUOTE, 0); }
		public ImportFEContext(ImportsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).enterImportFE(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).exitImportFE(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof regexToolVisitor ) return ((regexToolVisitor<? extends T>)visitor).visitImportFE(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ImportEndContext extends ImportsContext {
		public ImportEndContext(ImportsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).enterImportEnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).exitImportEnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof regexToolVisitor ) return ((regexToolVisitor<? extends T>)visitor).visitImportEnd(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ImportCommentLEContext extends ImportsContext {
		public TerminalNode COMMENT() { return getToken(regexToolParser.COMMENT, 0); }
		public TerminalNode LINE_END() { return getToken(regexToolParser.LINE_END, 0); }
		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class,0);
		}
		public ImportCommentLEContext(ImportsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).enterImportCommentLE(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).exitImportCommentLE(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof regexToolVisitor ) return ((regexToolVisitor<? extends T>)visitor).visitImportCommentLE(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ImportLEContext extends ImportsContext {
		public Token fname;
		public TerminalNode IMPORT_KEY() { return getToken(regexToolParser.IMPORT_KEY, 0); }
		public TerminalNode LINE_END() { return getToken(regexToolParser.LINE_END, 0); }
		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class,0);
		}
		public TerminalNode QUOTE() { return getToken(regexToolParser.QUOTE, 0); }
		public ImportLEContext(ImportsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).enterImportLE(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).exitImportLE(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof regexToolVisitor ) return ((regexToolVisitor<? extends T>)visitor).visitImportLE(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportsContext imports() throws RecognitionException {
		ImportsContext _localctx = new ImportsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_imports);
		try {
			setState(61);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new ImportLEContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(46);
				match(IMPORT_KEY);
				setState(47);
				((ImportLEContext)_localctx).fname = match(QUOTE);
				setState(48);
				match(LINE_END);
				setState(49);
				imports();
				}
				break;
			case 2:
				_localctx = new ImportFEContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				match(IMPORT_KEY);
				setState(51);
				((ImportFEContext)_localctx).fname = match(QUOTE);
				setState(52);
				match(EOF);
				}
				break;
			case 3:
				_localctx = new ImportCommentLEContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(53);
				match(COMMENT);
				setState(54);
				match(LINE_END);
				setState(55);
				imports();
				}
				break;
			case 4:
				_localctx = new ImportCommentFEContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(56);
				match(COMMENT);
				setState(57);
				match(EOF);
				}
				break;
			case 5:
				_localctx = new ImportEmptyContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(58);
				match(LINE_END);
				setState(59);
				imports();
				}
				break;
			case 6:
				_localctx = new ImportEndContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamespaceContext extends ParserRuleContext {
		public Token name;
		public TerminalNode NAMESPACE_KEY() { return getToken(regexToolParser.NAMESPACE_KEY, 0); }
		public TerminalNode LINE_END() { return getToken(regexToolParser.LINE_END, 0); }
		public TerminalNode IDENT() { return getToken(regexToolParser.IDENT, 0); }
		public NamespaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespace; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).enterNamespace(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).exitNamespace(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof regexToolVisitor ) return ((regexToolVisitor<? extends T>)visitor).visitNamespace(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NamespaceContext namespace() throws RecognitionException {
		NamespaceContext _localctx = new NamespaceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_namespace);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(NAMESPACE_KEY);
			setState(64);
			((NamespaceContext)_localctx).name = match(IDENT);
			setState(65);
			match(LINE_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode LINE_END() { return getToken(regexToolParser.LINE_END, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(regexToolParser.EOF, 0); }
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).exitStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof regexToolVisitor ) return ((regexToolVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statements);
		try {
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				statement();
				setState(68);
				match(LINE_END);
				setState(69);
				statements();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				statement();
				setState(72);
				match(EOF);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				match(LINE_END);
				setState(75);
				statements();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(76);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Label_stmtContext label_stmt() {
			return getRuleContext(Label_stmtContext.class,0);
		}
		public Capture_stmtContext capture_stmt() {
			return getRuleContext(Capture_stmtContext.class,0);
		}
		public TerminalNode COMMENT() { return getToken(regexToolParser.COMMENT, 0); }
		public Build_stmtContext build_stmt() {
			return getRuleContext(Build_stmtContext.class,0);
		}
		public Test_stmtContext test_stmt() {
			return getRuleContext(Test_stmtContext.class,0);
		}
		public Func_stmtContext func_stmt() {
			return getRuleContext(Func_stmtContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof regexToolVisitor ) return ((regexToolVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statement);
		try {
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LABEL_KEY:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				label_stmt();
				}
				break;
			case CAPTURE_KEY:
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				capture_stmt();
				}
				break;
			case COMMENT:
				enterOuterAlt(_localctx, 3);
				{
				setState(81);
				match(COMMENT);
				}
				break;
			case BUILD_KEY:
				enterOuterAlt(_localctx, 4);
				{
				setState(82);
				build_stmt();
				}
				break;
			case TEST_KEY:
				enterOuterAlt(_localctx, 5);
				{
				setState(83);
				test_stmt();
				}
				break;
			case FUNCTION_KEY:
				enterOuterAlt(_localctx, 6);
				{
				setState(84);
				func_stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Label_stmtContext extends ParserRuleContext {
		public Token name;
		public TermContext val;
		public TerminalNode LABEL_KEY() { return getToken(regexToolParser.LABEL_KEY, 0); }
		public Term_listContext term_list() {
			return getRuleContext(Term_listContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(regexToolParser.IDENT, 0); }
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public Label_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).enterLabel_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).exitLabel_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof regexToolVisitor ) return ((regexToolVisitor<? extends T>)visitor).visitLabel_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Label_stmtContext label_stmt() throws RecognitionException {
		Label_stmtContext _localctx = new Label_stmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_label_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(LABEL_KEY);
			setState(88);
			((Label_stmtContext)_localctx).name = match(IDENT);
			setState(89);
			match(T__0);
			setState(90);
			((Label_stmtContext)_localctx).val = term();
			setState(91);
			term_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Capture_stmtContext extends ParserRuleContext {
		public Capture_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_capture_stmt; }
	 
		public Capture_stmtContext() { }
		public void copyFrom(Capture_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CaptureArrayContext extends Capture_stmtContext {
		public Token name;
		public TerminalNode CAPTURE_KEY() { return getToken(regexToolParser.CAPTURE_KEY, 0); }
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public Term_listContext term_list() {
			return getRuleContext(Term_listContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(regexToolParser.IDENT, 0); }
		public CaptureArrayContext(Capture_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).enterCaptureArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).exitCaptureArray(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof regexToolVisitor ) return ((regexToolVisitor<? extends T>)visitor).visitCaptureArray(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CaptureSingleContext extends Capture_stmtContext {
		public Token name;
		public TerminalNode CAPTURE_KEY() { return getToken(regexToolParser.CAPTURE_KEY, 0); }
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public Term_listContext term_list() {
			return getRuleContext(Term_listContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(regexToolParser.IDENT, 0); }
		public CaptureSingleContext(Capture_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).enterCaptureSingle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).exitCaptureSingle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof regexToolVisitor ) return ((regexToolVisitor<? extends T>)visitor).visitCaptureSingle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Capture_stmtContext capture_stmt() throws RecognitionException {
		Capture_stmtContext _localctx = new Capture_stmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_capture_stmt);
		try {
			setState(106);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new CaptureSingleContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				match(CAPTURE_KEY);
				setState(94);
				((CaptureSingleContext)_localctx).name = match(IDENT);
				setState(95);
				match(T__0);
				setState(96);
				term();
				setState(97);
				term_list();
				}
				break;
			case 2:
				_localctx = new CaptureArrayContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				match(CAPTURE_KEY);
				setState(100);
				match(T__1);
				setState(101);
				((CaptureArrayContext)_localctx).name = match(IDENT);
				setState(102);
				match(T__0);
				setState(103);
				term();
				setState(104);
				term_list();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Build_stmtContext extends ParserRuleContext {
		public Token name;
		public VariableContext label;
		public Token flags;
		public TerminalNode BUILD_KEY() { return getToken(regexToolParser.BUILD_KEY, 0); }
		public TerminalNode IDENT() { return getToken(regexToolParser.IDENT, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public List<TerminalNode> CONSTANT() { return getTokens(regexToolParser.CONSTANT); }
		public TerminalNode CONSTANT(int i) {
			return getToken(regexToolParser.CONSTANT, i);
		}
		public Build_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_build_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).enterBuild_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).exitBuild_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof regexToolVisitor ) return ((regexToolVisitor<? extends T>)visitor).visitBuild_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Build_stmtContext build_stmt() throws RecognitionException {
		Build_stmtContext _localctx = new Build_stmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_build_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(BUILD_KEY);
			setState(109);
			((Build_stmtContext)_localctx).name = match(IDENT);
			setState(110);
			match(T__0);
			setState(111);
			((Build_stmtContext)_localctx).label = variable();
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CONSTANT) {
				{
				{
				setState(112);
				((Build_stmtContext)_localctx).flags = match(CONSTANT);
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Test_stmtContext extends ParserRuleContext {
		public Test_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_test_stmt; }
	 
		public Test_stmtContext() { }
		public void copyFrom(Test_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TestConstContext extends Test_stmtContext {
		public VariableContext build;
		public Token input;
		public Test_outputContext output;
		public TerminalNode TEST_KEY() { return getToken(regexToolParser.TEST_KEY, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode CONSTANT() { return getToken(regexToolParser.CONSTANT, 0); }
		public Test_outputContext test_output() {
			return getRuleContext(Test_outputContext.class,0);
		}
		public TestConstContext(Test_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).enterTestConst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).exitTestConst(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof regexToolVisitor ) return ((regexToolVisitor<? extends T>)visitor).visitTestConst(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TestQuoteContext extends Test_stmtContext {
		public VariableContext build;
		public Token input;
		public Test_outputContext output;
		public TerminalNode TEST_KEY() { return getToken(regexToolParser.TEST_KEY, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode QUOTE() { return getToken(regexToolParser.QUOTE, 0); }
		public Test_outputContext test_output() {
			return getRuleContext(Test_outputContext.class,0);
		}
		public TestQuoteContext(Test_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).enterTestQuote(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof regexToolListener ) ((regexToolListener)listener).exitTestQuote(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof regexToolVisitor ) return ((regexToolVisitor<? extends T>)visitor).visitTestQuote(this);
			else return visitor.visitChildren(this);
		}
	}
